@@ -314,12 +314,6 @@ ctx.add_project(
       </tr>
 
       <tr>
-        <td align="right"><tt>--auto-props-ignore-case</tt></td>
-        <td>Ignore the case of filenames when matching auto-props
-          patterns.</td>
-      </tr>
-
-      <tr>
         <td align="right"><tt>--mime-types=FILE</tt></td>
         <td><p>Specifies an Apache-style mime.types file for setting
           files' <tt>svn:mime-type</tt> property based on the file
