@@ -34,6 +34,7 @@ Version x.x.x (not yet released)
  * If a non-trunk default branch is excluded, graft its contents to trunk.
  * Require --symbol-transform pattern to match entire symbol name.
  * Treat files as binary by default instead of as text.
+ * Treat auto-props case-insensitively; deprecate --auto-props-ignore-case.
 
  Miscellaneous:
  * Add a simple (nonportable) script to log cvs2svn memory usage.
